Rename list item classes, cleanups